diseño extra agregado

--- a/assets/servicioRutina.html
+++ b/assets/servicioRutina.html
@@ -17,14 +17,14 @@
         <header>
             <div class="container">
                 <div id="header-logo-mobile" class="top-gym-logo">
-                    <a href="#">Top<br />Gym</a>
+                    <a href="../index.html">Top<br />Gym</a>
                 </div>
 
                 <nav>
                     <ul class="flex">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="#features">Sobre Nosotros</a></li>
-                        <li><a href="#schedule-services">Clases</a></li>
+                        <li><a href="#">Rutinas</a></li>
                         <li id="header-logo" class="top-gym-logo">
                             <a href="#">Top<br />Gym</a>
                         </li>
@@ -52,13 +52,17 @@
             </div>
         </div>
     </section>
-
+    <div class="presentacion_de_app text-center">
+        <h1>Rutinas</h1>
+        <h3>Para aprovechar mejor esta sección, ingrese su entrenamiento completo; Con el nombre para identificar su entrenamiento, el volumen en horas que le demando, y por último la carga total que ha levantado en kgs.</h3>
+        <h3>Suba su entrenamiento a la nube, y luego, analicelo en "estadísticas".</h3>
+    </div>
     <div id="container_toma_datos" class="container"></div>
     <div id="container_muestra_ingresos" class="container"></div>
     <div id="container_analisis_datos" class="container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../scripts/main.js"></script>
 </body>
 
 </html>
