--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Home</title>
 </head>
 <body>
     <section id="hero">
@@ -20,7 +20,7 @@
               <ul class="flex">
                 <li><a href="#">Home</a></li>
                 <li><a href="#features">Sobre Nosotros</a></li>
-                <li><a href="#schedule-services">Clases</a></li>
+                <li><a href="./assets/servicioRutina.html">Rutinas</a></li>
                 <li id="header-logo" class="top-gym-logo">
                   <a href="#">Top<br/>Gym</a>
                 </li>
@@ -111,7 +111,7 @@
           </div>
         </div>
     
-        <a href="servicioRutina.html"><button>Ver Todos Los Servicios</button></a>
+        <a href="./assets/servicioRutina.html"><button>Ver Todos Los Servicios</button></a>
       </section>
     
       <section id="trainers">
@@ -222,7 +222,8 @@
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="rutinas.js"></script>
-    <script src="app.js"></script>
+    <script src="./scripts/app.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/rutinas.js"></script>
 </body>
 </html>
