--- a/assets/servicioRutina.html
+++ b/assets/servicioRutina.html
@@ -60,9 +60,13 @@
     <div id="container_toma_datos" class="container"></div>
     <div id="container_muestra_ingresos" class="container"></div>
     <div id="container_analisis_datos" class="container"></div>
+    <!--  <div id="container_busqueda_datos" class="container d-flex justify-content-center">
+    </div>
+    <!-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../scripts/main.js"></script>
+
 </body>
 
+<script src="../scripts/main.js"></script>
+<script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
