--- a/assets/servicioRutina.html
+++ b/assets/servicioRutina.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleRutina.css">
     <title>Rutinas</title>
@@ -66,7 +67,9 @@
 
 
 </body>
-
-<script src="../scripts/main.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="../scripts/main.js"></script>
+
+
 </html>
